@@ -3,6 +3,9 @@
     * tests/test_image_menu_item.c: Add check for function
       geda_image_menu_item_set_accel_group.
 
+    * tests/test_menu_item.c: Add check for function
+      geda_menu_item_get_toggle_size.
+
 2020-03-20 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/widgets/geda_menu.c: Add ancillary variable page_size and upper
